--- a/chatbot_eval/config/config.ini
+++ b/chatbot_eval/config/config.ini
@@ -1,3 +1,3 @@
 [openai]
 api_key=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
-model=gpt-4o-mini
+model=gpt-4.1-nano
