--- a/chatbot_eval/.gitignore
+++ b/chatbot_eval/.gitignore
@@ -1,3 +1,11 @@
 *.pyc
 __pycache__/
 config.ini
+
+# Ignore all .json and .csv files
+*.json
+*.csv
+
+# But not the ones in the "config" folder
+!config/*.json
+!config/*.csv
