feat: add + use azure openai client

--- a/chatbot_eval/config/config.ini.sample
+++ b/chatbot_eval/config/config.ini.sample
@@ -1,3 +1,9 @@
 [openai]
 api_key=
-model=
+model = gpt-4.1-mini
+
+[azure_openai]
+api_key = 
+endpoint =
+deployment = gpt-4.1-mini
+api_version = 2024-12-01-preview
